--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <script src="main.js"></script>
 </head>
 <body>
-    
+    <div class="container-fluid navbar">
+        <div class="navheadrs">
+                <p class="navtitle" id="navsprout">SPROUT</p>
+        </div>
+
+    </div>
 </body>
 </html>
