--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <div class="container-fluid navbar">
         <div class="navheadrs">
                 <p class="navtitle" id="navsprout">SPROUT</p>
+                <div class="navheaders">
+                        <p class="navtitle" id="navphilosophy">Philosophy</p>
+
+                </div>
         </div>
 
     </div>
